Added an header to index.html page

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="./Assets/CSS/index.css">
 </head>
 
-<!-- <body>
+<body>
     <div class="container">
         <div class="header">
             <header>Javascript Quiz</header>
         </div>
-        <div class="tips_box">
+        <!-- <div class="tips_box">
             <div class="start-button"> <button>Start Quiz</button>
             </div>
             <div class="tips_title">
@@ -22,7 +22,8 @@
             </div>
             <div class="tips_list">
                 <div class="tips-1">1. Once you finish answering <span>ALL</span> the questions click the
-                    <span>Submit</span> button</div>
+                    <span>Submit</span> button
+                </div>
                 <div class="tips-2">2. Each question carries equal marks</div>
                 <div class="tips-3">3. There are a total of <span>5 questions</span></div>
                 <div class="tips-4">4. After submitting your answers you will know whether you have passed excellently,
@@ -68,12 +69,12 @@
                     <p><input type="radio" name="quiz5" class="question5" value="Subtraction">D. Subtraction</p>
                 </div>
                 <input class="btn" type="button" name="quiz" class="" value="Submit">
-                
+
             </form>
         </div>
     </div>
     </div>
-    <script type="text/javascript" src="./quiz.js"></script> -->
+    <script type="text/javascript" src="./quiz.js"></script> --> -->
 
 </body>
 
