--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="header">
             <header>Javascript Quiz</header>
         </div>
-        <!-- <div class="tips_box">
+        <div class="tips_box">
             <div class="start-button"> <button>Start Quiz</button>
             </div>
             <div class="tips_title">
                 <span>Tips To Note Before Answering the Questions</span>
             </div>
-            <div class="tips_list">
+            <!-- <div class="tips_list">
                 <div class="tips-1">1. Once you finish answering <span>ALL</span> the questions click the
                     <span>Submit</span> button
                 </div>
@@ -74,7 +74,7 @@
         </div>
     </div>
     </div>
-    <script type="text/javascript" src="./quiz.js"></script> --> -->
+    <script type="text/javascript" src="./quiz.js"></script> --> --> -->
 
 </body>
 
