listed items in the title section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="tips_title">
                 <span>Tips To Note Before Answering the Questions</span>
             </div>
-            <!-- <div class="tips_list">
+            <div class="tips_list">
                 <div class="tips-1">1. Once you finish answering <span>ALL</span> the questions click the
                     <span>Submit</span> button
                 </div>
@@ -30,7 +30,7 @@
                     fairly or poorly</div>
             </div>
         </div>
-        <div class="content_box">
+        <!-- <div class="content_box">
             <form name="quiz" class="quiz" id="quiz">
                 <div>
                     <h3>1. Which of the following is <span class="not">NOT</span> a component of an element?</h3>
@@ -74,7 +74,7 @@
         </div>
     </div>
     </div>
-    <script type="text/javascript" src="./quiz.js"></script> --> --> -->
+    <script type="text/javascript" src="./quiz.js"></script> --> --> --> -->
 
 </body>
 
