--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     fairly or poorly</div>
             </div>
         </div>
-        <!-- <div class="content_box">
+        <div class="content_box">
             <form name="quiz" class="quiz" id="quiz">
                 <div>
                     <h3>1. Which of the following is <span class="not">NOT</span> a component of an element?</h3>
@@ -39,7 +39,7 @@
                     <p><input type="radio" name="quiz1" class="question1" value="variable">C. variable</p>
                     <p><input type="radio" name="quiz1" class="question1" value="closing tag">D. closing tag</p>
                 </div>
-                <div>
+                <!-- <div>
                     <h3>2.Which of the following is not an example of data type?</h3>
                     <p><input type="radio" name="quiz2" class="question2" value="Strings">A. Strings</p>
                     <p><input type="radio" name="quiz2" class="question2" value="Letters">B. Letters</p>
@@ -74,7 +74,7 @@
         </div>
     </div>
     </div>
-    <script type="text/javascript" src="./quiz.js"></script> --> --> --> -->
+    <script type="text/javascript" src="./quiz.js"></script> --> --> --> --> -->
 
 </body>
 
