--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                     <p><input type="radio" name="quiz1" class="question1" value="variable">C. variable</p>
                     <p><input type="radio" name="quiz1" class="question1" value="closing tag">D. closing tag</p>
                 </div>
-                <!-- <div>
+                <div>
                     <h3>2.Which of the following is not an example of data type?</h3>
                     <p><input type="radio" name="quiz2" class="question2" value="Strings">A. Strings</p>
                     <p><input type="radio" name="quiz2" class="question2" value="Letters">B. Letters</p>
                     <p><input type="radio" name="quiz2" class="question2" value="Numbers">C. Numbers</p>
                     <p><input type="radio" name="quiz2" class="question2" value="Booleans">D. Booleans</p>
                 </div>
-                <div>
+                <!-- <div>
                     <h3>3.Which of the following is not an example of nath operators in Javascript?</h3>
                     <p><input type="radio" name="quiz3" class="question3" value="Remainder">A. Remainder</p>
                     <p><input type="radio" name="quiz3" class="question3" value="Increment">B. Increment</p>
@@ -74,7 +74,7 @@
         </div>
     </div>
     </div>
-    <script type="text/javascript" src="./quiz.js"></script> --> --> --> --> -->
+    <script type="text/javascript" src="./quiz.js"></script> --> --> --> --> --> -->
 
 </body>
 
