--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <p><input type="radio" name="quiz2" class="question2" value="Numbers">C. Numbers</p>
                     <p><input type="radio" name="quiz2" class="question2" value="Booleans">D. Booleans</p>
                 </div>
-                <!-- <div>
+                 <div>
                     <h3>3.Which of the following is not an example of nath operators in Javascript?</h3>
                     <p><input type="radio" name="quiz3" class="question3" value="Remainder">A. Remainder</p>
                     <p><input type="radio" name="quiz3" class="question3" value="Increment">B. Increment</p>
@@ -70,11 +70,11 @@
                 </div>
                 <input class="btn" type="button" name="quiz" class="" value="Submit">
 
-            </form>
+            <!-- </form>
         </div>
     </div>
     </div>
-    <script type="text/javascript" src="./quiz.js"></script> --> --> --> --> --> -->
+    <script type="text/javascript" src="./quiz.js"></script> --> --> --> --> --> --> -->
 
 </body>
 
