--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <input class="btn" type="button" name="quiz" class="" value="Submit">
 
-            <!-- </form>
+            </form>
         </div>
     </div>
     </div>
