--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
                     <h3>1. Which of the following is <span class="not">NOT</span> a component of an element?</h3>
                     <p><input type="radio" name="quiz1" class="question1" value="content">A. content</p>
                     <p><input type="radio" name="quiz1" class="question1" value="opening tag">B. opening tag</p>
-                    <p><input type="radio" name="quiz1" class="question1" value="variable">C. variable</p>
+                    <p><input type="radio" name="quiz1" class="question1" value="variable"id="correct1">C. variable</p>
                     <p><input type="radio" name="quiz1" class="question1" value="closing tag">D. closing tag</p>
                 </div>
                 <div>
                     <h3>2.Which of the following is not an example of data type?</h3>
                     <p><input type="radio" name="quiz2" class="question2" value="Strings">A. Strings</p>
-                    <p><input type="radio" name="quiz2" class="question2" value="Letters">B. Letters</p>
+                    <p><input type="radio" name="quiz2" class="question2" value="Letters"id="correct2">B. Letters</p>
                     <p><input type="radio" name="quiz2" class="question2" value="Numbers">C. Numbers</p>
                     <p><input type="radio" name="quiz2" class="question2" value="Booleans">D. Booleans</p>
                 </div>
                  <div>
-                    <h3>3.Which of the following is not an example of nath operators in Javascript?</h3>
+                    <h3>3.Which of the following is not an example of math operators in Javascript?</h3>
                     <p><input type="radio" name="quiz3" class="question3" value="Remainder">A. Remainder</p>
                     <p><input type="radio" name="quiz3" class="question3" value="Increment">B. Increment</p>
                     <p><input type="radio" name="quiz3" class="question3" value="Decrement">C. Decrement</p>
-                    <p><input type="radio" name="quiz3" class="question3" value="None">D. None</p>
+                    <p><input type="radio" name="quiz3" class="question3" value="None"id="correct3">D. None</p>
                 </div>
                 <div>
                     <h3>4.Which of the following is not an example of a loop in Javascript?</h3>
                     <p><input type="radio" name="quiz4" class="question4" value="While loop">A. While loop</p>
-                    <p><input type="radio" name="quiz4" class="question4" value="Cross loop">B. Cross loop</p>
+                    <p><input type="radio" name="quiz4" class="question4" value="Cross loop"id="correct4">B. Cross loop</p>
                     <p><input type="radio" name="quiz4" class="question4" value="For....in loop">C. For....in loop</p>
                     <p><input type="radio" name="quiz4" class="question4" value="Do.....while loop">D. Do.....while loop
                     </p>
@@ -64,17 +64,21 @@
                 <div>
                     <h3>5. Which of the following is not an example of an array method?</h3>
                     <p><input type="radio" name="quiz5" class="question5" value="Unshift">A. Unshift</p>
-                    <p><input type="radio" name="quiz5" class="question5" value="Line">B. Line</p>
+                    <p><input type="radio" name="quiz5" class="question5" value="Line"id="correct5">B. Line</p>
                     <p><input type="radio" name="quiz5" class="question5" value="Addition">C. Addition</p>
                     <p><input type="radio" name="quiz5" class="question5" value="Subtraction">D. Subtraction</p>
                 </div>
-                <input class="btn" type="button" name="quiz" class="" value="Submit">
-
+                <input type="button" name="quiz" class="Submit" value="Submit" onclick="result()">
             </form>
+            <div id="scoreCard">
+                <p id="total"></p>
+                <p id="comment"></p>
+
+            </div>
         </div>
     </div>
     </div>
-    <script type="text/javascript" src="./quiz.js"></script> --> --> --> --> --> --> -->
+    <script type="text/javascript" src="quiz.js"></script> 
 
 </body>
 
