created a new div entitled scoreCard

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <input type="button" name="quiz" class="Submit" value="Submit" onclick="result()">
             </form>
-            <div id="scoreCard">
+            <!-- <div id="scoreCard">
                 <p id="total"></p>
                 <p id="comment"></p>
 
@@ -78,7 +78,7 @@
         </div>
     </div>
     </div>
-    <script type="text/javascript" src="quiz.js"></script> 
+    <script type="text/javascript" src="quiz.js"></script>  --> -->
 
 </body>
 
