--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
                 </div>
                 <input type="button" name="quiz" class="Submit" value="Submit" onclick="result()">
             </form>
-            <!-- <div id="scoreCard">
+            <div id="scoreCard">
                 <p id="total"></p>
                 <p id="comment"></p>
 
-            </div>
+            <!-- </div>
         </div>
     </div>
     </div>
-    <script type="text/javascript" src="quiz.js"></script>  --> -->
+    <script type="text/javascript" src="quiz.js"></script>  --> --> -->
 
 </body>
 
