updated my index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz-Board</title>
-    <link rel="stylesheet" href="./Assets/CSS/index.css">
+    <link rel="stylesheet" href="CSS/index.css">
 </head>
 
 <body>
@@ -74,11 +74,11 @@
                 <p id="total"></p>
                 <p id="comment"></p>
 
-            <!-- </div>
+            </div>
         </div>
     </div>
     </div>
-    <script type="text/javascript" src="quiz.js"></script>  --> --> -->
+    <script type="text/javascript" src="quiz.js"></script> 
 
 </body>
 
